src/styles/global.scss
@import './imports';

* {
  &::selection {
    background-color: #B2D7FF;
  }
}

.cm-page-builder {
  box-sizing: border-box;
  font-family: 'Open Sans', sans-serif !important;
  margin: 0;
  padding-bottom: 50px;
  min-height: 100vh;
}

//placeholder-style
[contenteditable]:empty:focus:before {
  content: attr(placeholder);
  display: block;
}

[contenteditable] {
  -webkit-tap-highlight-color: transparent;
  a{
    color: $blue;
  }
}

.text-selection-tool {
  position: absolute;
  display: inline-flex;
  border-radius: 2px;	
  background-color: #52565E;	
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2);
  .tool-btn {
    font-size: $t4-text;
    padding: 5px;
    margin: 0 4px;
    color: $white;
    cursor: pointer;
    opacity: 0.4;

  }
  .tool-btn-active {
    font-size: $t4-text;
    padding: 5px;
    margin: 0 4px;
    color: $white;
    cursor: pointer;
    opacity: 1;
  }
  .bold-tool-btn {
    font-size: $t8-text;
    font-weight: $bold-text;
    padding: 5px;
    margin: 0 4px;
    color: $white;
    line-height: 17px;
    cursor: pointer;
    opacity: 0.4;
  }
  .bold-tool-btn-active {
    font-size: $t8-text;
    font-weight: $bold-text;
    padding: 5px;
    margin: 0 4px;
    color: $white;
    line-height: 17px;
    cursor: pointer;
    opacity: 1;
  }
  .divider {
    border: 1px solid #1D2129;
    opacity: 0.2;
  }
}

